[tool.poetry]
name = "langar"
version = "0.1.0"
description = ""
authors = ["Adi Wabisabi <adi@nederlandfoodpantry.org>"]
license = "Unlicense"

[tool.poetry.scripts]
langar = "langar.app:run"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
redis = "^4.2.2"
requests = "^2.27.1"
oauthlib = "^3.2.0"
pyOpenSSL = "^22.0.0"
Flask-Login = "^0.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
